# upaper

./: .env  .gitignore  README.md  deep_paper_report.py  hf_papers_download_or_parser_to_oss.py  md_bilingual.py  pyproject.toml  ruff.toml  test_aliyun_oss.py  test_model.py
backend/: README.md  main.py  requirements.txt  test_data_transform.py
backend/app/: __init__.py  config.py  data.py  errors.py  main.py  vector_example.py  wsgi.py
backend/app/auth/: jwt.py
backend/app/db/: base.py  ext_storage.py  session.py
backend/app/docs/: openapi.py  routes.py
backend/app/domain/: paper.py
backend/app/file/: deep_paper_report.py  file_download.py  file_parser.py  file_to_mardown.py  hf_papers_download_or_parser_to_oss.py  md_bilingual.py
backend/app/integrations/: supabase_client.py
backend/app/llm/: core.py  monitoring.py  openai_client.py  openrouter_client.py
backend/app/services/: file_service.py  llm_service.py  paper_service.py  user_service.py
backend/app/utils/: download_paper.py  get_hf_papers.py
backend/utils/: get_hf_papers.py  parse_mineru.py  url_to_markdown.py
example/: hf_daily_papers_sync_supabase.py  hf_papaer_smolagents.py  models.py  test_papers_data.jsonl
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Badge.tsx  Header.tsx  PaperCard.tsx  SidebarFilters.tsx
frontend/lib/: api.ts  data.ts  types.ts  useDebounce.ts
scripts/: quick_create_all.py
scripts/sql/: supabase_papers.sql
(+67 files in other folders)
