[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-starter"
version = "0.2.0"
description = "Flask + SQLAlchemy + Supabase switch + OpenAPI Docs + JWT"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "PyMySQL>=1.1",
  "python-dotenv>=1.0",
  "pydantic>=2.8",
  "supabase>=2.6.0",
  "httpx>=0.27",
  "PyJWT>=2.9",
  "openai>=0.27",
  "httpx>=0.23",
  "pymilvus>=2.2",
  "chromadb>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "ANN", "D"]
ignore = ["D100", "D104", "D401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
